src/styles/h5p-multi-media-choice.scss
@use './colors' as *;
@use './mixins' as *;
@use './sizes' as *;
@use 'sass:math';

.h5p-multi-media-choice {

  .h5p-multi-media-choice-option-list {
    display: inline-block;

    // Removes <ul> default indentation
    padding: 0;
    list-style-type: none;
    width: 100%;
    margin-left: 10px; // Half gap of masonry
  }

  .h5p-multi-media-choice-list-item {
    padding: var(--h5p-theme-spacing-xs) 0 var(--h5p-theme-spacing-xxs) 0;

    &:focus {
      outline: none;
    }

    &:focus-visible {
      .h5p-multi-media-choice-enabled {
        box-shadow: 0 0 $border-radius $border-thin-stroke-width $color-border-interaction;
      }
      .h5p-multi-media-choice-enabled.selected {
        box-shadow: 0 0 5px 7px $color-border-interaction;
      } 
    }
  }

  .h5p-question-content,
  .h5p-question-introduction {
    padding: 0;
    margin: 0;
  }

  .h5p-question-introduction {
    margin: var(--h5p-theme-spacing-m);
    font-size: var(--h5p-theme-font-size-xl);
    color: var(--h5p-theme-text-primary);
    font-weight: 600;
  }

  .h5p-question-introduction p {
    margin: 0px;
  }

  .h5p-multi-media-choice-option {
    position: relative;

    // Removes space below images
    line-height: 0;

    box-sizing: border-box;
    background-color: var(--h5p-theme-ui-base);
    outline: none;

    border-style: solid;
    padding: $option-padding-default;
  }

  .h5p-multi-media-choice-media-wrapper {
    svg {
      width: 100%;
      height: 100%;
    }
    // Using the padding-top trick to have a specific ratio
    &.h5p-multi-media-choice-media-wrapper-specific-ratio {
      overflow: hidden;
      position: relative;
    }

    &.h5p-multi-media-choice-media-wrapper-1to1 {
      padding-top: 100%;
    }

    &.h5p-multi-media-choice-media-wrapper-3to2 {
      padding-top: 66.67%;
    }

    &.h5p-multi-media-choice-media-wrapper-4to3 {
      padding-top: 75%;
    }

    &.h5p-multi-media-choice-media-wrapper-16to9 {
      padding-top: 56.25%;
    }

    &.h5p-multi-media-choice-media-wrapper:has(.h5p-theme-placeholder-img) {
      padding-top: 0;
    }
  }

  .h5p-multi-media-choice-media {
    background-color: var(--h5p-theme-alternative-base);
    display: inline-block;
    object-fit: contain;
    width: 100%;
    height: 100%;
    border-radius: var(--h5p-theme-border-radius-small);

    &.h5p-multi-media-choice-media-specific-ratio {
      position: absolute;
      top: 0;
      left: 0;
    }
  }

  .h5p-multi-media-choice-enabled {

    &:hover {
      &:not(.h5p-multi-media-choice-option.selected) {
        cursor: pointer;

        &:after {
          @include hover-overlay();
        }
      }
    }

    &:hover {
      &.h5p-mmc-multiAnswer {
        cursor: pointer;
        
        &:after {
          @include hover-overlay();
        }
      }
    }
  }

  .h5p-multi-media-choice-option.selected{
    &:hover {
      &:after {
        @include hover-overlay();
      }
    }
  }

  @keyframes slide-right-fade {
    from {
      opacity: 0;
      left: 0%;
      transform: translate(0%);
    }

    to {
      opacity: 1;
      left: 50%;
      transform: translate(-50%);
    }
  }

  .h5p-multi-media-choice-correct:before,
  .h5p-multi-media-choice-wrong:before,
  .h5p-multi-media-choice-show-correct:before {
    padding: var(--h5p-theme-spacing-xs);
    font-size: var(--h5p-theme-font-size-s);
  }

  .h5p-multi-media-choice-correct {
    background-color: var(--h5p-theme-feedback-correct-secondary);
    border-color: var(--h5p-theme-feedback-correct-third);

    &:before {
      @include solution-button('\e903', var(--h5p-theme-feedback-correct-main));
      background-color: var(--h5p-theme-feedback-correct-secondary);
      border-color: var(--h5p-theme-feedback-correct-third);
    }
  }

  .h5p-multi-media-choice-show-correct {
    background-color: $color-show-correct-light;
    border-color: $color-show-correct-dark;
    border-style: dotted;

    &:before {
      @include solution-button('\e903', $color-show-correct-dark);
      background-color: $color-show-correct-light;
      border-color: $color-show-correct-dark;
    }
  }

  .h5p-multi-media-choice-wrong {
    background-color: var(--h5p-theme-feedback-incorrect-secondary);
    border-color: var(--h5p-theme-feedback-incorrect-third);

    &:before {
      @include solution-button('\e902', var(--h5p-theme-feedback-incorrect-main));
      background-color: var(--h5p-theme-feedback-incorrect-secondary);
      border-color: var(--h5p-theme-feedback-incorrect-third);
    }
  }

  .hidden-accessibility-solution-text {
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
    width: 1px;
  }

  .h5p-multi-media-video-button, .h5p-audio-minimal-button {
    position: absolute;
    background-color: var(--h5p-theme-main-cta-base);
    z-index: 1;
    bottom: 0;
    right: 0;
    margin: 0.6em;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    color: var(--h5p-theme-contrast-cta);
    border: 2px solid var(--h5p-theme-ui-base);
    border-radius: 50%;
    padding: var(--h5p-theme-spacing-s);
    transition: all 0.1s linear 0s;

    &:hover {
      background-color: var(--h5p-theme-main-cta-light);
      box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.1);
      scale: 1.1;
    }

    &:active {
      background-color: var(--h5p-theme-main-cta-dark);
    }

    &:before {
      font-size: 1.25rem;
      height: 2rem;
      line-height: 2rem;
      width: 2rem;
      box-sizing: border-box;
      padding-left: 2px;
    }

    &:focus {
      outline: 2px ridge var(--h5p-theme-main-cta-base);
      outline-offset: 2px;
    }
  }

  .h5p-multi-media-video-button::before {
    font-family: "h5p-theme";
    content: "\e91f";
  }

  .h5p-multi-media-modal {
    position: absolute;
    background: rgba(0,0,0,0.85);
    top: 0;
    left: 0;
    padding: 0;
    border: 1px solid #888;
    z-index: 1;
    overflow: hidden;
    width: 100%;
    height: 100%;
    animation-name: animateModal;
    animation-duration: 0.4s;
    display: flex;
    align-items: center;
    justify-content: center;

    .h5p-multi-media-choice-modal-container {
      position: relative;
      width: 100%;
      display: flex;
      justify-content: center;
      align-items: center;
      max-width: 100%;
      max-height: 100%;
      container-name: h5p-mmc-modal-container;
      container-type: inline-size;

      .h5p-multi-media-choice-modal-content {
        position: relative;
        background: var(--h5p-theme-ui-base);
        padding: var(--h5p-theme-spacing-l);
        border-radius: var(--h5p-theme-border-radius-large);
        border: white;
        width: 80%;
        display: block;
        max-width: 80%;
        box-shadow: none;
        max-height: 100%;

        @container h5p-mmc-modal-container (width < 480px) {
          padding: 3px;
          width: 100%;
          max-width: 100%;
        }

        .modal-close-button {
          background-color: var(--h5p-theme-ui-base);
          position: absolute;
          top: math.div($button-size, -3);
          right: math.div($button-size, -3);
          cursor: pointer;
          border: none;
          height: 4rem;
          width: 4rem;
          z-index: 1;
          border-radius: 50%;
          box-shadow: 0px 4px 4px 0px #00000040;
          display: flex;
          justify-content: center;
          align-items: center;
          padding: 0;

          @container h5p-mmc-modal-container (width < 480px) {
            right: 0;
            height: $button-size-small;
            width: $button-size-small;
          }

          width: $button-size;
          height: $button-size;

          .icon-cross::before {
            color: var(--h5p-theme-text-primary);
            content: "\e910";
            font-family: "h5p-theme";
            font-size: math.div($button-size, 2);
            font-weight: bold;
            left: 50%;
            position: absolute;
            top: 50%;
            transform: translate(-50%, -50%);
          }

          @container h5p-mmc-modal-container (width < 480px) {
            height: $button-size-small;
            width: $button-size-small;

            .icon-cross::before {
              font-size: math.div($button-size-small, 2);
            }
          }
        }
      }
    }
  }

  .h5p-multi-media-content-media-video-player {
    max-width: 100%;
  }

  .h5p-multi-media-choice-content {
    position: relative;
    background-color: var(--h5p-theme-background);
    padding: var(--h5p-theme-spacing-m);
  }

  @keyframes animateModal {
    from { opacity: 0 }
    to { opacity: 1 }
  }

  .h5p-video {
    max-width: 100%;
    margin: 0 auto;
  }

  .h5p-multi-media-content-audio-wrapper .h5p-audio-inner {
    background-color: unset;
  }

  .h5p-multi-media-content-audio-wrapper .h5p-audio-inner .h5p-audio-minimal-button {
    color: var(--h5p-theme-contrast-cta);
    font-size: revert; // Use the default CP font size
  }

  .h5p-multi-media-content-audio-wrapper {
    position: absolute;
    bottom: 0;
    right: 0;
    z-index: 1;

    .h5p-audio-minimal-button {
      padding: var(--h5p-theme-spacing-s);
      border: 2px solid var(--h5p-theme-ui-base);
      background: var(--h5p-theme-main-cta-base);
      display: flex;
      align-items: center;
      justify-content: center;

      &:hover {
        background: var(--h5p-theme-main-cta-light);
        cursor: pointer;
      }
    }

    // Make it similar to Video button
    .h5p-audio-minimal-button::before {
      font-size: 1.25rem;
      height: 2rem;
      line-height: 2rem;
      width: 2rem;
    }

    .h5p-audio-minimal-play-paused:before {
      box-sizing: border-box;
      padding-left: 2px;
    }

    .h5p-audio-minimal-play::before {
      font-weight: bold;
    }
  }
}

